--- a/WebApp/Views/ClientGroups/Edit.cshtml
+++ b/WebApp/Views/ClientGroups/Edit.cshtml
@@ -13,22 +13,8 @@
         <form asp-action="Edit">
             <input type="hidden" asp-for="Id" />
 
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control"/>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DiscountPercent" class="control-label"></label>
-                <input asp-for="DiscountPercent" class="form-control"/>
-                <span asp-validation-for="DiscountPercent" class="text-danger"></span>
-            </div>
+            <partial name="PartialCreateEdit" model="Model"/>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
