--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <h3>Welcome</h3>
+
+    @* <partial name="_LoginPartial"/> *@
+    <ul class="alert alert-secondary">
+        <partial name="_LoginPartial"/>
+    </ul>
 </div>
