--- a/WebApp/Views/WorkersPositions/Create.cshtml
+++ b/WebApp/Views/WorkersPositions/Create.cshtml
@@ -11,14 +11,11 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            
+            <partial name="PartialCreateEdit" model="Model"/>
+
             <div class="form-group">
-                <label asp-for="WorkerPositionValue" class="control-label"></label>
-                <input asp-for="WorkerPositionValue" class="form-control" />
-                <span asp-validation-for="WorkerPositionValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
