--- a/WebApp/Views/WorkersPositions/Edit.cshtml
+++ b/WebApp/Views/WorkersPositions/Edit.cshtml
@@ -11,15 +11,12 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id"/>
+            
+            <partial name="PartialCreateEdit" model="Model"/>
+
             <div class="form-group">
-                <label asp-for="WorkerPositionValue" class="control-label"></label>
-                <input asp-for="WorkerPositionValue" class="form-control" />
-                <span asp-validation-for="WorkerPositionValue" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
     </div>
