--- a/WebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -70,28 +70,13 @@
                 </a>
             </div>
 
-            <a href="login.html" class="text-center">I already have a membership</a>
+            <a asp-area="Identity" asp-page="/Account/Login" class="text-center">I already have a membership</a>
         </div>
         <!-- /.form-box -->
     </div><!-- /.card -->
 </div>
 <!-- /.register-box -->
 
-<!-- jQuery -->
-<script src="../../plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- iCheck -->
-<script src="../../plugins/iCheck/icheck.min.js"></script>
-<script>
-    $(function() {
-        $('input').iCheck({
-            checkboxClass: 'icheckbox_square-blue',
-            radioClass: 'iradio_square-blue',
-            increaseArea: '20%' // optional
-        })
-    })
-</script>
 </body>
 
 <div class="row">
