--- a/WebApp/Views/BillLines/Index.cshtml
+++ b/WebApp/Views/BillLines/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Bill)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductForClientId)
+                @Html.DisplayNameFor(model => model.Product)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Sum)
@@ -30,12 +30,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.SumWithDiscount)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TaxPercent)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FinalSum)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -46,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Bill.InvoiceNr)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ProductForClient.Id)
+                @Html.DisplayFor(modelItem => item.Product)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Sum)
@@ -59,12 +53,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SumWithDiscount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaxPercent)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FinalSum)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
