--- a/WebApp/Views/BillLines/PartialDetailsDelete.cshtml
+++ b/WebApp/Views/BillLines/PartialDetailsDelete.cshtml
@@ -10,10 +10,10 @@
             @Html.DisplayFor(model => model.Bill.InvoiceNr)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductForClientId)
+            @Html.DisplayNameFor(model => model.Product)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductForClient.Id)
+            @Html.DisplayFor(model => model.Product)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Sum)
@@ -38,17 +38,5 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SumWithDiscount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TaxPercent)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaxPercent)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FinalSum)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FinalSum)
         </dd>
     </dl>
