--- a/WebApp/Views/Bills/PartialDetailsDelete.cshtml
+++ b/WebApp/Views/Bills/PartialDetailsDelete.cshtml
@@ -7,25 +7,19 @@
             @Html.DisplayNameFor(model => model.Client)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.Address)
+            @Html.DisplayFor(model => model.Client.CompanyName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ArrivalFee)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ArrivalFee)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Sum)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sum)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DiscountPercent)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DiscountPercent)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SumWithDiscount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SumWithDiscount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TaxPercent)
