not working, last commit before changing database a bit

--- a/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/Index.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.AppUser.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.WorkObject.WorkObjectName)
+                @Html.DisplayFor(modelItem => item.WorkObject.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.From)
