--- a/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/PartialCreateEdit.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/PartialCreateEdit.cshtml
@@ -1,4 +1,4 @@
-@model WebApp.ViewModels.AppUserOnObjectCreateEditViewModel
+@model WebApp.Areas.Admin.ViewModels.AppUserOnObjectCreateEditViewModel
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <div class="form-group">
