--- a/HomeProject/WebApp/Areas/Admin/Views/AllBills/PartialCreateEdit.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/AllBills/PartialCreateEdit.cshtml
@@ -18,11 +18,11 @@
     <input asp-for="Bill.ArrivalFee" class="form-control"/>
     <span asp-validation-for="Bill.ArrivalFee" class="text-danger"></span>
 </div>
-<div class="form-group">
-    <label asp-for="Bill.SumWithoutTaxes" class="control-label"></label>
-    <input asp-for="Bill.SumWithoutTaxes" class="form-control"/>
-    <span asp-validation-for="Bill.SumWithoutTaxes" class="text-danger"></span>
-</div>
+@* <div class="form-group"> *@
+@*     <label asp-for="Bill.SumWithoutTaxes" class="control-label"></label> *@
+@*     <input asp-for="Bill.SumWithoutTaxes" class="form-control"/> *@
+@*     <span asp-validation-for="Bill.SumWithoutTaxes" class="text-danger"></span> *@
+@* </div> *@
 <div class="form-group">
     <label asp-for="Bill.TaxPercent" class="control-label"></label>
     <input asp-for="Bill.TaxPercent" class="form-control"/>
