--- a/HomeProject/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
               crossorigin="anonymous"
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE="/>
     </environment>
+    <link rel="stylesheet" href="~/lib/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="~/AdminLTE/dist/css/adminlte.min.css"/>
     @* <link rel="stylesheet" href="~/css/site.css"/> *@
 </head>
@@ -121,6 +122,7 @@
             integrity="sha256-E/V4cWE4qvAeO5MOhjtGtqDzPndRO1LBk8lJ/PR7CA4=">
     </script>
 </environment>
+<script src="~/lib/flatpickr/dist/flatpickr.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
 @RenderSection("Scripts", required: false)
