--- a/HomeProject/WebApp/Views/AppUsers/Index.cshtml
+++ b/HomeProject/WebApp/Views/AppUsers/Index.cshtml
@@ -12,9 +12,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
+            @* <th> *@
+            @*     @Html.DisplayNameFor(model => model.Id) *@
+            @* </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
@@ -30,9 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNr)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
+            @* <th> *@
+            @*     @Html.DisplayNameFor(model => model.Email) *@
+            @* </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.AppUserInPositions)
             </th>
@@ -42,9 +42,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
+            @* <td> *@
+            @*     @Html.DisplayFor(modelItem => item.Id) *@
+            @* </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
@@ -60,16 +60,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PhoneNr)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
+            @* <td> *@
+            @*     @Html.DisplayFor(modelItem => item.Email) *@
+            @* </td> *@
             <td>
                 @Html.DisplayFor(modelItem => item.AppUserInPositions)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">@Resources.Views.Common.Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">@Resources.Views.Common.Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">@Resources.Views.Common.Delete</a>
+                @* <a asp-action="Delete" asp-route-id="@item.Id">@Resources.Views.Common.Delete</a> *@
             </td>
         </tr>
 }
