--- a/HomeProject/WebApp/Views/AppUsers/PartialCreateEdit.cshtml
+++ b/HomeProject/WebApp/Views/AppUsers/PartialCreateEdit.cshtml
@@ -1,6 +1,6 @@
 @model BLL.App.DTO.Identity.AppUser
 
-<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<div asp-validation-summary="All" class="text-danger"></div>
 
 <div class="form-group">
     <label asp-for="FirstName" class="control-label"></label>
@@ -27,8 +27,8 @@
     <input asp-for="PhoneNr" class="form-control"/>
     <span asp-validation-for="PhoneNr" class="text-danger"></span>
 </div>
-<div class="form-group">
-    <label asp-for="Email" class="control-label"></label>
-    <input asp-for="Email" class="form-control"/>
-    <span asp-validation-for="Email" class="text-danger"></span>
-</div>
+@* <div class="form-group"> *@
+@*     <label asp-for="Email" class="control-label"></label> *@
+@*     <input asp-for="Email" class="form-control"/> *@
+@*     <span asp-validation-for="Email" class="text-danger"></span> *@
+@* </div> *@
