--- a/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/Create.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/AllAppUsersOnObjects/Create.cshtml
@@ -1,4 +1,4 @@
-@model WebApp.ViewModels.AppUserOnObjectCreateEditViewModel
+@model WebApp.Areas.Admin.ViewModels.AppUserOnObjectCreateEditViewModel
 
 @{
     ViewData["Title"] = "Create";
