--- a/HomeProject/WebApp/Areas/Admin/Views/AllWorkObjects/PartialDetailsDelete.cshtml
+++ b/HomeProject/WebApp/Areas/Admin/Views/AllWorkObjects/PartialDetailsDelete.cshtml
@@ -1,36 +1,78 @@
 @model BLL.App.DTO.WorkObject
 
 <h4>@Resources.Domain.WorkObject.WorkObjectString</h4>
-<hr />
+<hr/>
 <dl class="row">
-    <dt class = "col-sm-2">
+    <dt class="col-sm-2">
         @Html.DisplayNameFor(model => model.Client)
     </dt>
-    <dd class = "col-sm-10">
+    <dd class="col-sm-10">
         @Html.DisplayFor(model => model.Client.CompanyName)
     </dd >
-    <dt class = "col-sm-2">
+    <dt class="col-sm-2">
         @Html.DisplayNameFor(model => model.From)
     </dt>
-    <dd class = "col-sm-10">
+    <dd class="col-sm-10">
         @Html.DisplayFor(model => model.From)
     </dd>
-    <dt class = "col-sm-2">
+    <dt class="col-sm-2">
         @Html.DisplayNameFor(model => model.Until)
     </dt>
-    <dd class = "col-sm-10">
+    <dd class="col-sm-10">
         @Html.DisplayFor(model => model.Until)
     </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.AppUsersOnObject)
+
+    <dt class="col-sm-3">
+        @Html.DisplayNameFor(model => model.AppUsersOnObject) (
+        <a asp-action="ChooseForWorkObject"
+           asp-controller="AllAppUsersOnObjects" asp-route-workobjectid="@Model.Id">
+            Add
+        </a>)
     </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.AppUsersOnObject)
+    <dd class="col-sm-10">
+        <ul>
+
+            @foreach (var appUserOnObject in Model.AppUsersOnObject)
+            {
+                <li>
+                    @appUserOnObject.AppUser.FirstLastName
+                    <a asp-action="Edit"
+                       asp-controller="AllAppUsersOnObjects" asp-route-id="@Model.Id">
+                        Edit
+                    </a>
+                    <a asp-action="Delete"
+                       asp-controller="AllAppUsersOnObjects" asp-route-id="@Model.Id">
+                        Delete
+                    </a>
+                </li>
+            }
+        </ul>
     </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.ProductsForClient)
+
+    <dt class="col-sm-3">
+        @Html.DisplayNameFor(model => model.ProductsForClient) (
+        <a asp-action="ChooseForWorkObject"
+           asp-controller="AllProductsForClients" asp-route-workobjectid="@Model.Id">
+            Add
+        </a>)
     </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.ProductsForClient)
+    <dd class="col-sm-10">
+        <ul>
+
+            @foreach (var productForClient in Model.ProductsForClient)
+            {
+                <li>@productForClient.Product.ProductName
+                    <a asp-action="Edit"
+                       asp-controller="AllProductsForClients" asp-route-id="@Model.Id">
+                        Edit
+                    </a>
+                    <a asp-action="Delete"
+                       asp-controller="AllProductsForClients" asp-route-id="@Model.Id">
+                        Delete
+                    </a></li>
+            }
+        </ul>
     </dd>
+
+   
 </dl>
