--- a/HomeProject/WebApp/Views/WorkObjects/Index.cshtml
+++ b/HomeProject/WebApp/Views/WorkObjects/Index.cshtml
@@ -21,16 +21,19 @@
             <th>
                 @Html.DisplayNameFor(model => model.Until)
             </th>
-            @* <th> *@
-            @*     @Html.DisplayNameFor(model => model.AppUsersOnObject) *@
-            @* </th> *@
+            <th>
+                @Html.DisplayNameFor(model => model.AppUsersOnObject)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductsForClient)
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Client.Address)
+                @Html.DisplayFor(modelItem => item.Client.CompanyName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.From)
@@ -38,9 +41,24 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Until)
             </td>
-            @* <td> *@
-            @*     @Html.DisplayFor(modelItem => item.AppUsersOnObject) *@
-            @* </td> *@
+            <td>
+                <ul>
+
+                    @foreach (var appUserOnObject in item.AppUsersOnObject)
+                    {
+                        <li>@appUserOnObject.AppUser.FirstLastName</li>
+                    }
+                </ul>
+            </td> 
+            <td>
+                <ul>
+
+                    @foreach (var productForClient in item.ProductsForClient)
+                    {
+                        <li>@productForClient.Product.ProductName</li>
+                    }
+                </ul>
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">@Resources.Views.Common.Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">@Resources.Views.Common.Details</a> |
